# test-rust

./: .gitignore  Cargo.toml  Containerfile  Containerfile.alpine  LICENSE  Makefile  README.md
.github/workflows/: blank.yml
manifest/: update_project_conf.sh
manifest/online/: my1.Cargo.toml  my2.Cargo.toml  my3.Cargo.toml  myexe.Cargo.toml
my1/: CHANGELOG.md  Cargo.toml
my1/src/: lib.rs
my2/: CHANGELOG.md  Cargo.toml
my2/src/: lib.rs
my3/: CHANGELOG.md  Cargo.toml
my3/src/: lib.rs
myexe/: CHANGELOG.md  Cargo.toml
myexe/src/: main.rs
